--- a/package.json
+++ b/package.json
@@ -5,67 +5,67 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "~16.1.0",
-    "@angular/common": "~16.1.0",
-    "@angular/compiler": "~16.1.0",
-    "@angular/core": "~16.1.0",
-    "@angular/forms": "~16.1.0",
-    "@angular/platform-browser": "~16.1.0",
-    "@angular/platform-browser-dynamic": "~16.1.0",
-    "@angular/router": "~16.1.0",
-    "@nx/angular": "16.4.0",
+    "@angular/animations": "17.3.6",
+    "@angular/common": "17.3.6",
+    "@angular/compiler": "17.3.6",
+    "@angular/core": "17.3.6",
+    "@angular/forms": "17.3.6",
+    "@angular/platform-browser": "17.3.6",
+    "@angular/platform-browser-dynamic": "17.3.6",
+    "@angular/router": "17.3.6",
+    "@nx/angular": "18.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.1.0",
-    "@angular-devkit/core": "~16.1.0",
-    "@angular-devkit/schematics": "~16.1.0",
-    "@angular-eslint/eslint-plugin": "~16.0.0",
-    "@angular-eslint/eslint-plugin-template": "~16.0.0",
-    "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "~16.1.0",
-    "@angular/language-service": "~16.1.0",
-    "@nx/cypress": "16.4.0",
-    "@nx/eslint-plugin": "16.4.0",
-    "@nx/jest": "16.4.0",
-    "@nx/js": "16.4.0",
-    "@nx/linter": "16.4.0",
-    "@nx/storybook": "16.4.0",
-    "@nx/web": "16.4.0",
-    "@nx/workspace": "16.4.0",
-    "@schematics/angular": "~16.1.0",
-    "@storybook/addon-essentials": "^7.0.9",
-    "@storybook/angular": "^7.0.9",
+    "@angular-devkit/build-angular": "17.3.6",
+    "@angular-devkit/core": "17.3.6",
+    "@angular-devkit/schematics": "17.3.6",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "~17.3.6",
+    "@angular/compiler-cli": "17.3.6",
+    "@angular/language-service": "17.3.6",
+    "@nx/cypress": "18.3.4",
+    "@nx/eslint-plugin": "18.3.4",
+    "@nx/jest": "18.3.4",
+    "@nx/js": "18.3.4",
+    "@nx/linter": "18.3.4",
+    "@nx/storybook": "18.3.4",
+    "@nx/web": "18.3.4",
+    "@nx/workspace": "18.3.4",
+    "@schematics/angular": "17.3.6",
+    "@storybook/addon-essentials": "7.6.18",
+    "@storybook/angular": "7.6.18",
     "@storybook/core-common": "^7.0.9",
-    "@storybook/core-server": "^7.0.9",
-    "@storybook/test-runner": "^0.7.2",
-    "@types/jest": "^29.4.0",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@storybook/core-server": "7.6.18",
+    "@storybook/test-runner": "0.11.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
     "autoprefixer": "^10.4.0",
-    "cypress": "^12.11.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "cypress": "^13.8.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-cypress": "2.15.2",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~13.1.0",
-    "ng-packagr": "~16.1.0",
-    "nx": "16.4.0",
+    "jest-preset-angular": "14.0.3",
+    "ng-packagr": "17.3.0",
+    "nx": "18.3.4",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "5.4.5"
   }
 }
